Minor fixes in last excercise. Added placeholder difficulty ratings.

--- a/courseplan/courseplan.tex
+++ b/courseplan/courseplan.tex
@@ -16,7 +16,7 @@
 \begin{document}
 
 \chapter*{Datorer och datoranvändning}
-\courseinfo{EDAA60 för D1, EITA65 för C1}{läsperiod 1 2024/23, 3 högskolepoäng.}
+\courseinfo{EDAA60 för D1, EITA65 för C1}{läsperiod 1 2024/25, 3 högskolepoäng.}
 
 \section*{Allmänt}
 
@@ -29,7 +29,7 @@
     I kursen Datorer och datoranvändning får du en översikt över datatekniska begrepp och praktiska färdigheter som du kommer att ha användning av under dina studier. Kursen läses av studenter från C- och D-programmen. För C-studenter ingår den som en del av kursen EITA65.
 
     \item[Kursansvarig]
-    Mattias Nordahl, rum E21xx, E-huset 2:a våningen.\\
+    Mattias Nordahl, rum E2184, E-huset 2:a våningen.\\
     E-post: \url{mattias.nordahl@cs.lth.se}
 
     \item[Administratör]
@@ -43,10 +43,11 @@
         föreläsningar                & 3 (+1) st \\
         laborationer (obligatoriska) & 3 (+1) st \\
     \end{tabular}
-    Från och med i år tillkommer en fjärde föreläsning och laboration, som är frivilliga. Med start nästa läsår (2025/26) kommer dessa att vara obligatoriska.
+
+    Från och med i år tillkommer en fjärde föreläsning samt en fjärde laboration som är frivillig. Med start nästa läsår (2025/26) kommer även denna laboration att vara obligatorisk.
 
     \item[Kurslitteratur]
-    All kurslitteratur finns tillgänglig elektroniskt via kurshemsidan. En viss andel av litteraturen delas även ut i pappersform genom institutionens försorg.
+    All kurslitteratur finns tillgänglig elektroniskt via kurshemsidan. En viss andel av litteraturen delas även ut i pappersform under nollningsveckan, genom institutionens försorg.
     %Kursmaterial delas ut vid den första föreläsningen. I kursmaterialet ingår också kompendiet ''Introduktion till LTH:s Unixdatorer'' som delades ut i samband med datorstugan i introduktionsveckan.
 \end{Items}
 
@@ -55,22 +56,22 @@
 
 \begin{Items}
     \item[Föreläsningar]
-    Tisdagar 15--17 läsvecka 1-4 (kalendervecka 35-38), i föreläsningssal E:A.
+    Tisdagar 15--17 läsvecka 1--4 (kalendervecka 36--39), i föreläsningssal E:A.
 
     Föreläsningsschema:
 
     {\hspace{0.5cm}
     \begin{tabular}{lll}
         \emph{Dag}  & \emph{Ämne}                   & \emph{Anmärkning}   \\ \midrule
-        Tisdag 29/8 & Introduktion, Linux/Unix      & Förberedelse, lab 1 \\
-        Tisdag 5/9  & \LaTeX                        & Förberedelse, lab 2 \\
-        Tisdag 12/9 & Versionshantering, Git/GitHub & Förberedelse, lab 3 \\
-        Tisdag 19/9 & Maskinkod                     & Förberedelse, lab 4 \\
+        Tisdag 3/9  & Introduktion, Linux/Unix      & Förberedelse, lab 1 \\
+        Tisdag 10/9 & \LaTeX                        & Förberedelse, lab 2 \\
+        Tisdag 17/9 & Versionshantering, Git/GitHub & Förberedelse, lab 3 \\
+        Tisdag 24/9 & Maskinkod                     & Förberedelse, lab 4 \\
     \end{tabular}
     }
 
     \item[Datorlaborationer]
-    Torsdagar (10--12, 13--15 eller 15-17) och/eller fredagar (10--12 eller 15--17) beroende på grupptillhörighet. Den första laborationen för de första grupperna är torsdag 31/8. Laborationsuppgifterna finns i häftet ''Datorlaborationer, Datorer och datoranvändning''. Observera att laborationerna inleds med en kontrollskrivning som du måste klara för att du ska få delta i laborationen, så du måste förbereda dig inför laborationen genom att läsa igenom uppgiften och göra förberedelserna listade under rubriken ''Hemarbete'' samt se till att du kan svara på frågorna under rubriken ''Kontrollfrågor''.
+    Onsdagar (15--17), torsdagar (10--12, 13--15 eller 15-17) eller fredagar (10--12 eller 15--17) beroende på grupptillhörighet. Den första laborationen för de första grupperna är onsdag 4/9. Laborationsuppgifterna finns i häftet ''Datorlaborationer, Datorer och datoranvändning''. Observera att laborationerna inleds med en kontrollskrivning som du måste klara för att du ska få delta i laborationen, så du måste förbereda dig inför laborationen genom att läsa igenom uppgiften och göra förberedelserna listade under rubriken ''Hemarbete'' samt se till att du kan svara på frågorna under rubriken ''Kontrollfrågor''.
 
     Gruppindelningen för laborationerna är densamma som i kursen EDAA45 Programmering, grundkurs. Om du inte läser EDAA45 parallellt, och alltså inte är inplacerad i en grupp, så kontakta kursansvarig via mail (\url{mattias.nordahl@cs.lth.se}) med önskemål om passande laborationstid så kommer du att bli tilldelad en plats i en av grupperna. Vi gör vårt bästa men kan inte fullt ut garantera att du kan laborera den önskade tiden.
 
@@ -82,6 +83,7 @@
         D1                & Linux/Unix  \\
         D2                & \LaTeX      \\
         D3                & Git/GitHub  \\
+        D4                & Maskinkod   \\
     \end{tabular}
     }
 
@@ -123,7 +125,7 @@
     % }
 
 
-    Uppsamlingslaborationer kommer att arrangeras veckorna efter den ordinarie schemalagda undervisningens slut för att ge alla som missat någon laboration en chans att ta igen dem. Se kurshemsidan för information om när dessa uppsamlingslaborationer arrangeras och hur du gör för att anmäla dig till dem.
+    Uppsamlingslaborationer kommer att anordnas veckorna efter den ordinarie schemalagda undervisningens slut för att ge alla som missat någon laboration en chans att ta igen dem. Se kurshemsidan för information om när dessa uppsamlingslaborationer arrangeras och hur du gör för att anmäla dig till dem.
 
 \end{Items}
 
