--- a/lab-instructions/modules/unix/unix_terminal.tex
+++ b/lab-instructions/modules/unix/unix_terminal.tex
@@ -35,7 +35,7 @@ Länkar till det ovan refererade materialet finns på kurshemsidan under  ''Dato
 
 \clearpage
 \subsection*{Datorarbete}
-Kom ihåg att laborationen är ett inlärningsmoment. Ta hjälp av labbledaren om du har frågor, och anteckna gärna frågor som du vill diskutera med handledaren under din redovisning.
+Kom ihåg att laborationen är ett inlärningsmoment. Ta hjälp av materialet och labbledaren, och anteckna gärna frågor som du vill diskutera med handledaren under din redovisning.
 \begin{Datorarbete}
 	\item Logga in på datorn. Använd det användarnamn och det lösenord som du tidigare har kvitterat ut (ILL 1.3).
 	\item Fönsterhantering (ILL 1.4). Ägna några minuter åt att bekanta dig med fönstermiljön. Klicka runt bland menyer och applikationer.
@@ -52,7 +52,7 @@ Kom ihåg att laborationen är ett inlärningsmoment. Ta hjälp av labbledaren o
 		\begin{Code}
 			ls -l      // lista filer, med mer info
 			!!         // repetera det senaste kommandot
-			man touch  // visa manualen för touch
+			man touch  // visa manualen för touch-kommandot
 			touch fil  // skapa en fil som heter 'fil'
 			!ls        // repetera det senaste kommandot som börjar med 'ls'
 		\end{Code}
@@ -64,7 +64,7 @@ Kom ihåg att laborationen är ett inlärningsmoment. Ta hjälp av labbledaren o
 		\item Skriv ut en innehållsförteckning över din hemkatalog. Skriv ut en förteckning där också filer vars namn börjar med punkt (s.k. \emph{punktfiler}) skrivs ut.
 		\item Gå till katalogen \code{/usr/local/cs/dod/me/metool/src/metool}. Skriv ut en innehållsförteckning över katalogen. Skriv ut en förteckning över de filer vars namn innehåller strängen \code{Statement}.
 		\item Prova hur filnamnskomplettering fungerar. Skriv \code{less R} och tryck på \commandchar{tab}. Datorn fyller i tecken i filnamnet så länge de är unika (nu står det \code{less Re} på kommando\-raden). Det finns mer än en fil vars namn börjar med \file{Re}. Tryck på \commandchar{tab} en gång till (ibland behövs det två extra tryckningar) så får du en lista över dessa filer. Skriv \code{a} och tryck på \commandchar{tab} igen; datorn fyller i till det unika filnamnet \file{ReadStatement.java}. Tryck på \commandchar{return} för att titta på filen.
-		\item Gå till din hemkatalog och skapa en katalog för de filer som används i denna laboration. Katalogen ska heta \file{lab1} och vara en underkatalog till en katalog \file{dod}, där du ska spara allt som rör kursen Datorer och datoranvändning. Du ska i fortsättningen skapa en ny katalog för varje datorlaboration som du gör. Använd följande kommandon:
+		\item Gå till din hemkatalog och skapa en katalog för de filer som används i denna laboration. Katalogen ska heta \file{lab1} och vara en underkatalog till en katalog \file{dod}, där du kan spara allt som rör kursen Datorer och datoranvändning. Du kan i fortsättningen skapa en ny katalog för varje datorlaboration som du gör. Använd följande kommandon:
 
 		\begin{Code}
 			cd          // gå till hemkatalogen om du inte redan är där
